--- a/.github/workflows/update-theater-data.yml
+++ b/.github/workflows/update-theater-data.yml
@@ -1,4 +1,4 @@
-name: Update Doulist Data
+name: Update Theater Data
 
 on:
   schedule:
@@ -14,8 +14,6 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -25,17 +23,18 @@ jobs:
       - name: Install dependencies
         run: |
           npm install --no-package-lock --no-save axios cheerio
+          # 临时安装到 node_modules 但不创建配置文件
           
       - name: Create data directory
         run: mkdir -p data
         
-      - name: Update doulist data
+      - name: Update theater data
         run: |
-          node scripts/update-doulist-data.js
+          node scripts/update-theater-data.js
           
       - name: Commit and push if changed
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add data/doulist-data.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update doulist data [skip ci]" && git push)
+          git add data/theater-data.json
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update theater data [skip ci]" && git push)
