--- a/.github/workflows/update-maoyan-data.yml
+++ b/.github/workflows/update-maoyan-data.yml
@@ -2,39 +2,34 @@ name: Update Maoyan Data
 
 on:
   schedule:
-    # Runs every 6 hours
-    - cron: '0 */6 * * *'
-  workflow_dispatch:
+    - cron: '0 */6 * * *' # 每6小时运行一次
+  workflow_dispatch: # 允许手动运行
 
 jobs:
   update-data:
     runs-on: ubuntu-latest
-    env:
-      TZ: Asia/Shanghai
-      TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
-    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        
-    - name: Install axios
-      run: npm install axios --no-package-lock --no-save
-      
-    - name: Create data directory
-      run: mkdir -p data
-      
-    - name: Run Maoyan data script
-      run: node scripts/update-maoyan-data.js
-      
-    - name: Commit and push changes
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add data/maoyan-data.json
-        git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update Maoyan data [skip ci]"
-        git push
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install Dependencies
+        run: npm install axios  # 安装脚本需要的插件
+
+      - name: Run Script
+        run: node scripts/update-maoyan-data.js # 注意这里加了 scripts/ 路径
+
+      - name: Commit and Push
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/maoyan-data.json
+          git commit -m "Update Maoyan data" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
