--- a/.github/workflows/update-maoyan-data.yml
+++ b/.github/workflows/update-maoyan-data.yml
@@ -2,34 +2,33 @@ name: Update Maoyan Data
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # 每6小时运行一次
-  workflow_dispatch: # 允许手动运行
+    - cron: '0 */6 * * *'
+  workflow_dispatch:
 
 jobs:
-  update-data:
+  update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: 20
 
-      - name: Install Dependencies
-        run: npm install axios  # 安装脚本需要的插件
+      - name: Install Axios
+        run: npm install axios  # 确保手动安装依赖
 
       - name: Run Script
-        run: node scripts/update-maoyan-data.js # 注意这里加了 scripts/ 路径
+        run: node scripts/update-maoyan-data.js
 
       - name: Commit and Push
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add data/maoyan-data.json
-          git commit -m "Update Maoyan data" || echo "No changes to commit"
+          git commit -m "Update Maoyan Data" || echo "No changes to commit"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
