--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,14 @@
 {
+  "version": 2,
   "rewrites": [
-    { 
-      "source": "/api/tmdb/(.*)", 
-      "destination": "https://api.themoviedb.org/$1?api_key=6358fd374e1372bd48effd9e21521917" 
+    {
+      "source": "/api/tmdb/(.*)",
+      "destination": "https://api.themoviedb.org/$1?api_key=6358fd374e1372bd48effd9e21521917"
     },
-    { 
-      "source": "/3/(.*)", 
-      "destination": "https://api.themoviedb.org/3/$1?api_key=6358fd374e1372bd48effd9e21521917" 
+    {
+      "source": "/3/(.*)",
+      "destination": "https://api.themoviedb.org/3/$1?api_key=6358fd374e1372bd48effd9e21521917"
     }
   ]
 }
+
