--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,8 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/api/tmdb/(.*)",
-      "destination": "https://api.themoviedb.org/$1?api_key=6358fd374e1372bd48effd9e21521917"
-    },
-    {
-      "source": "/3/(.*)",
-      "destination": "https://api.themoviedb.org/3/$1?api_key=6358fd374e1372bd48effd9e21521917"
+      "source": "/api/tmdb/:path*",
+      "destination": "https://api.themoviedb.org/:path*?api_key=6358fd374e1372bd48effd9e21521917"
     }
   ]
 }
