--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/api/tmdb/(.*)",
+      "source": "/3/(.*)",
+      "destination": "https://api.themoviedb.org/3/$1?api_key=6358fd374e1372bd48effd9e21521917"
+    },
+    {
+      "source": "/(.*)",
       "destination": "https://api.themoviedb.org/$1?api_key=6358fd374e1372bd48effd9e21521917"
     }
   ]
