--- a/.github/workflows/update-tmdb.yml
+++ b/.github/workflows/update-tmdb.yml
@@ -2,8 +2,8 @@ name: Update TMDB Data Daily
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天早上 8 点运行
-  workflow_dispatch: # 支持手动运行
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   update-data:
@@ -26,19 +26,16 @@ jobs:
           import requests
           import json
           import os
+          from datetime import datetime
 
           API_KEY = "6358fd374e1372bd48effd9e21521917"
           BASE_URL = "https://api.themoviedb.org/3"
           SAVE_PATH = "public/data"
           os.makedirs(SAVE_PATH, exist_ok=True)
 
-          # 配置说明：
-          # 1. Trending 使用 trending 接口，强行标记为 movie 解决“全部地区”显示问题
-          # 2. Movie 使用 now_playing 接口，解决日期太老的问题
-          # 3. TV 使用 on_the_air 接口，确保显示近期播出的剧
           configs = [
-              {"file": "TMDB_Trending.json", "url": f"{BASE_URL}/trending/all/day", "type": "movie"},
-              {"file": "Trending.json", "url": f"{BASE_URL}/trending/all/day", "type": "movie"},
+              {"file": "TMDB_Trending.json", "url": f"{BASE_URL}/trending/all/week", "type": "movie"},
+              {"file": "Trending.json", "url": f"{BASE_URL}/trending/all/week", "type": "movie"},
               {"file": "TMDB_Movie.json", "url": f"{BASE_URL}/movie/now_playing", "type": "movie"},
               {"file": "Movie.json", "url": f"{BASE_URL}/movie/now_playing", "type": "movie"},
               {"file": "TMDB_TV.json", "url": f"{BASE_URL}/tv/on_the_air", "type": "tv"},
@@ -52,14 +49,19 @@ jobs:
                   data = resp.json()
 
                   if "results" in data:
-                      # 只取前 10 条最相关的，减少脚本加载压力
-                      raw_results = data["results"][:10]
                       cleaned_results = []
-                      
-                      for item in raw_results:
-                          # 字段兼容性转换
-                          title = item.get("title") or item.get("name") or "未知名称"
-                          date = item.get("release_date") or item.get("first_air_date") or "2026-01-01"
+                      for item in data["results"]:
+                          title = item.get("title") or item.get("name") or "未知"
+                          date_str = item.get("release_date") or item.get("first_air_date") or "1900-01-01"
+                          
+                          # --- 强力过滤逻辑 ---
+                          try:
+                              # 只保留 2024 年以后的片子，防止老片刷屏
+                              year = int(date_str.split("-")[0])
+                              if year < 2024: 
+                                  continue
+                          except:
+                              continue
                           
                           clean_item = {
                               "id": item.get("id"),
@@ -67,15 +69,14 @@ jobs:
                               "name": title,
                               "poster_path": item.get("poster_path"),
                               "backdrop_path": item.get("backdrop_path"),
-                              "release_date": date,
-                              "media_type": config["type"], # 强制使用配置中的类型
-                              "vote_average": item.get("vote_average", 0),
-                              "overview": item.get("overview", "")
+                              "release_date": date_str,
+                              "media_type": config["type"],
+                              "vote_average": item.get("vote_average", 0)
                           }
                           cleaned_results.append(clean_item)
                       
-                      data["results"] = cleaned_results
-                      # 移除不必要的元数据
+                      # 只取过滤后的前 10 条
+                      data["results"] = cleaned_results[:10]
                       data.pop("total_pages", None)
                       data.pop("total_results", None)
 
@@ -83,7 +84,7 @@ jobs:
                       json.dump(data, f, ensure_ascii=False, indent=2)
                   print(f"Successfully updated {config['file']}")
               except Exception as e:
-                  print(f"Error updating {config['file']}: {e}")
+                  print(f"Error: {e}")
           EOF
 
       - name: Commit and Push
@@ -91,5 +92,5 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git add public/data/*.json
-          git commit -m "Fix: All regions display and date freshness" || exit 0
+          git commit -m "Force filter old movies and update" || exit 0
           git push
